--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -15,3 +15,5 @@ $nav-btns-color-hover: rgb(202, 27, 173);
 
 $text-title-color: rgb(24, 124, 206);
 $text-color: rgb(87, 155, 211);
+
+$width-cell-size: 800px;
